v0.15.0/_sources/generated/statsmodels.discrete.discrete_model.CountResults.rst.txt
statsmodels.discrete.discrete\_model.CountResults
=================================================

.. currentmodule:: statsmodels.discrete.discrete_model

.. autoclass:: CountResults
   :exclude-members: conf_int,cov_params,f_test,get_diagnostic,get_distribution,get_influence,get_margeff,get_prediction,info_criteria,initialize,load,normalized_cov_params,predict,remove_data,save,score_test,set_null_options,summary,summary2,t_test,t_test_pairwise,wald_test,wald_test_terms,

   
   
   .. rubric:: Methods

   .. autosummary::
      :toctree:

      ~CountResults.conf_int
      ~CountResults.cov_params
      ~CountResults.f_test
      ~CountResults.get_diagnostic
      ~CountResults.get_distribution
      ~CountResults.get_influence
      ~CountResults.get_margeff
      ~CountResults.get_prediction
      ~CountResults.info_criteria
      ~CountResults.initialize
      ~CountResults.load
      ~CountResults.normalized_cov_params
      ~CountResults.predict
      ~CountResults.remove_data
      ~CountResults.save
      ~CountResults.score_test
      ~CountResults.set_null_options
      ~CountResults.summary
      ~CountResults.summary2
      ~CountResults.t_test
      ~CountResults.t_test_pairwise
      ~CountResults.wald_test
      ~CountResults.wald_test_terms
   
   
   

   
   
   .. rubric:: Properties

   .. autosummary::
      :toctree:

      ~CountResults.aic
      ~CountResults.bic
      ~CountResults.bse
      ~CountResults.fittedvalues
      ~CountResults.im_ratio
      ~CountResults.llf
      ~CountResults.llnull
      ~CountResults.llr
      ~CountResults.llr_pvalue
      ~CountResults.prsquared
      ~CountResults.pvalues
      ~CountResults.resid
      ~CountResults.resid_pearson
      ~CountResults.resid_response
      ~CountResults.tvalues
      ~CountResults.use_t
   
   
   